# Fenrir-Discord-Bot

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  bot.py  cfg.py  functions.py  pyproject.toml  update.py  utils.py
commands/: __init__.py  availability.py  base.py  bugreport.py  event_add.py  event_remove.py  events.py  help.py  history.py  invite.py  ping.py  potato.py  settings.py
data/: default_settings.json
lib/: event.py  settings.py  vrml.py
tests/: test_commands.py
