[tool.poetry]
name = "fenrir-discord-bot"
version = "0.1.0"
description = ""
authors = ["Paul Menden <paul.m.menden@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
requests = "^2.25.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
